# Financial-Models

./: .gitignore  Bankruptcy Predictive Model.ipynb  Cash Flow Prediction Model.ipynb  docker-compose.yml  entrypoint.sh  pyproject.toml
Bankruptcy_Prediction_Model/: bankruptcy_model.pkl  preprocessed_dataset.csv
Cash Flow Prediction Dataset/csv_data/: cleaned_financial_data.csv  combined_real_and_synthetic_data.csv  synthetic_financial_data.csv
Cash Flow Prediction Dataset/financial_data/AAP/: AAP_combined_financial_data.csv
Cash Flow Prediction Dataset/financial_data/ABNB/: ABNB_combined_financial_data.csv
Cash Flow Prediction Dataset/financial_data/ADBE/: ADBE_combined_financial_data.csv
Cash Flow Prediction Dataset/financial_data/AIG/: AIG_combined_financial_data.csv
Cash Flow Prediction Dataset/financial_data/AXP/: AXP_combined_financial_data.csv
Cash_Flow_Prediction_Model/: preprocessed_dataset.csv
New_Bankruptcy_Prediction_Dataset/csv_data/: cleaned_financial_data.csv  combined_financial_data.csv  combined_real_and_synthetic_data.csv  synthetic_financial_data.csv
app/: main.py
app/auth/: helpers.py  models.py  routes.py  schemas.py  services.py
app/bankruptcy_pred/: routes.py
app/cashflow/: routes.py
app/core/: constants.py  database.py  logging_config.py  mail.py  mongo_vector_store.py  mongodb_client.py  qr_code.py  redis.py  security.py  storage.py  template.py  utils.py
app/core/config/: config.py  config.yaml  (+1 more)
models/: cash_flow_model.pkl
scripts/: brevo.sh  create_feature.sh  export_path.sh  install_ffmeg.sh  migrate.sh
(+106 files in other folders)
