[tool.poetry]
name = "financial-models"
version = "0.1.0"
description = ""
authors = ["mannyuncharted <omoebun52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.2"
yfinance = "^0.2.52"
scikit-learn = "^1.6.1"
scalar-fastapi = "^1.0.3"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
